Remove jvmarg tags since they don't currently work.